fix side panel touch on mobile

--- a/frontend/app/styles/templates/application.scss
+++ b/frontend/app/styles/templates/application.scss
@@ -14,6 +14,9 @@
     }
 
     &__navigation {
+        a {
+          cursor: pointer;
+        }
         background: black;
         color: white;
         padding: $column-gutter / 2 $column-gutter;
